WR-1022: Make the footer fat - alignment fixes

--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles.css
@@ -7701,7 +7701,12 @@ h6 {
 .main-footer .row {
   position: relative;
   margin-bottom: 0;
-  padding-left: 1.35rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .main-footer .row {
+    padding-left: 1.35rem;
+  }
 }
 
 @media screen and (max-width: 640px) {
